tests/derivation/core/trivial 005-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Cannot derive generator for the primitive type String, use external instead

DerivedGen:1
 08 |
 09 | data X = MkX String
 10 |
 11 | checkedGen : Fuel -> Gen MaybeEmpty X
 12 | checkedGen = deriveGen
                   ^^^^^^^^^

